objects/TenantHourlyEntitlementConsumption__dll.object
<CustomObject>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>KQ_id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>businessenvtype__c</fullName>
        <label>Business Environment Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>carddefinitionbalance__c</fullName>
        <label>Card Definition Balance</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>carddefinitiondevelopername__c</fullName>
        <label>Card Definition Developer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contract__c</fullName>
        <label>Contract</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coreorgid__c</fullName>
        <label>Core Org ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entitlementbusinessenvtype__c</fullName>
        <label>Entitlement Business Environment Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entitlementdrawdowntime__c</fullName>
        <label>Entitlement Drawdown Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>entitlementorgid__c</fullName>
        <label>Entitlement Org ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entitlementschedule__c</fullName>
        <label>Entitlement Schedule</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extracttime__c</fullName>
        <label>Extract Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mgmtorgmultiplierid__c</fullName>
        <label>Management Org Multiplier ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>multipliertier__c</fullName>
        <label>Multiplier Tier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reconciliationid__c</fullName>
        <label>Reconciliation ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relatedid__c</fullName>
        <label>Related ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>resourceidorapiname__c</fullName>
        <label>Resource Id or Api Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>resourcetype__c</fullName>
        <label>Resource Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rootresourceidorapiname__c</fullName>
        <label>Root Resource Id or Api Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rootresourcetype__c</fullName>
        <label>Root Resource Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rowdetail__c</fullName>
        <label>Row Detail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>schedulebalance__c</fullName>
        <label>Schedule Balance</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tenantusagetypemultiplierid__c</fullName>
        <label>Tenant Usage Type Multiplier Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <label>Unit</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unitsconsumed__c</fullName>
        <label>Units Consumed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>usageaggregationtype__c</fullName>
        <label>Usage Aggregation Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usageconsumed__c</fullName>
        <label>Raw Usage</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>usagehourbucket__c</fullName>
        <label>Usage Hour</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>usagemodel__c</fullName>
        <label>Usage Model</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagereportingorgid__c</fullName>
        <label>Usage Reporting Org ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype0__c</fullName>
        <label>Usage Subtype 0</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype1__c</fullName>
        <label>Usage Subtype 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype2__c</fullName>
        <label>Usage Subtype 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagetypedevelopername__c</fullName>
        <label>Usage Type Developer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>